<resources>
    <string name="app_name">计算器v3.0</string>
    <string name="n0">0</string>
    <string name="n0_description">数字零</string>
    <string name="n1">1</string>
    <string name="n1_description">数字壹</string>
    <string name="n2">2</string>
    <string name="n2_description">数字贰</string>
    <string name="n3">3</string>
    <string name="n3_description">数字叁</string>
    <string name="n4">4</string>
    <string name="n4_description">数字肆</string>
    <string name="n5">5</string>
    <string name="n5_description">数字伍</string>
    <string name="n6">6</string>
    <string name="n6_description">数字陆</string>
    <string name="n7">7</string>
    <string name="n7_description">数字柒</string>
    <string name="n8">8</string>
    <string name="n8_description">数字捌</string>
    <string name="n9">9</string>
    <string name="n9_description">数字玖</string>
    <string name="add">+</string>
    <string name="add_description">加</string>
    <string name="sub">-</string>
    <string name="sub_description">减</string>
    <string name="multi">×</string>
    <string name="multi_description">乘</string>
    <string name="div">÷</string>
    <string name="div_description">除</string>
    <string name="e">e</string>
    <string name="e_description">e</string>
    <string name="equal">=</string>
    <string name="equal_description">等于</string>
    <string name="point">.</string>
    <string name="point_description">小数点</string>
    <string name="AC">AC</string>
    <string name="AC_description">清零</string>
    <string name="back">back</string>
    <string name="back_description">删除</string>
    <string name="percent">%</string>
    <string name="percent_description">百分号</string>
    <string name="left_bracket">(</string>
    <string name="left_bracket_description">左括号</string>
    <string name="right_bracket">)</string>
    <string name="right_bracket_description">右括号</string>
    <string name="empty"> </string>
    <string name="empty_description">占位</string>
</resources>