<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/background">

    <GridLayout
        android:id="@+id/under"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/display_marginTop"
        android:rowCount="5"
        android:columnCount="4">

        <TextView
            android:id="@+id/resultEmpty"
            android:layout_width="match_parent"
            android:layout_height="@dimen/empty_height"
            android:gravity="end|bottom"
            android:padding="@dimen/display_empty_padding" />

    </GridLayout>

    <GridLayout
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/display_marginTop"
        android:rowCount="6"
        android:columnCount="4">

        <android.widget.Button
            android:id="@+id/buttonA"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:text="@string/empty"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color2"
            android:background="@drawable/button_other"
            android:layout_margin="5dp"
            android:stateListAnimator="@null" />
        <android.widget.Button
            android:id="@+id/buttonB"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:text="@string/empty"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color2"
            android:background="@drawable/button_other"
            android:layout_margin="5dp"
            android:stateListAnimator="@null" />
        <android.widget.Button
            android:id="@+id/buttonAC"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:text="@string/AC"
            android:textSize="@dimen/AC_size"
            android:textColor="@color/text_color2"
            android:background="@drawable/button_other"
            android:layout_margin="5dp"
            android:stateListAnimator="@null"
            android:textStyle="bold" />
        <android.widget.Button
            android:id="@+id/buttonBack"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:drawableStart="@drawable/back"
            android:textSize="@dimen/text_size"
            android:background="@drawable/button_other"
            android:layout_margin="5dp"
            android:stateListAnimator="@null"
            android:contentDescription="@string/back_description"
            tools:ignore="RtlSymmetry" />

        <android.widget.Button
            android:id="@+id/buttonLeft_bracket"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:text="@string/left_bracket"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color2"
            android:background="@drawable/button_other"
            android:layout_margin="5dp"
            android:stateListAnimator="@null"
            android:textStyle="bold"/>
        <android.widget.Button
            android:id="@+id/buttonRight_bracket"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:text="@string/right_bracket"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color2"
            android:background="@drawable/button_other"
            android:layout_margin="5dp"
            android:stateListAnimator="@null"
            android:textStyle="bold"/>
        <android.widget.Button
            android:id="@+id/buttonPercent"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:text="@string/percent"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color2"
            android:background="@drawable/button_other"
            android:layout_margin="5dp"
            android:stateListAnimator="@null"
            android:textStyle="bold"/>
        <android.widget.Button
            android:id="@+id/buttonDiv"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:text="@string/div"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color2"
            android:background="@drawable/button_other"
            android:layout_margin="5dp"
            android:stateListAnimator="@null"
            android:textStyle="bold"/>

        <android.widget.Button
            android:id="@+id/buttonN7"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:text="@string/n7"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color1"
            android:background="@drawable/button_other"
            android:layout_margin="5dp"
            android:stateListAnimator="@null" />
        <android.widget.Button
            android:id="@+id/buttonN8"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:text="@string/n8"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color1"
            android:background="@drawable/button_other"
            android:layout_margin="5dp"
            android:stateListAnimator="@null" />
        <android.widget.Button
            android:id="@+id/buttonN9"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:text="@string/n9"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color1"
            android:background="@drawable/button_other"
            android:layout_margin="5dp"
            android:stateListAnimator="@null" />
        <android.widget.Button
            android:id="@+id/buttonMulti"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:text="@string/multi"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color2"
            android:background="@drawable/button_other"
            android:layout_margin="5dp"
            android:stateListAnimator="@null"
            android:textStyle="bold"/>

        <android.widget.Button
            android:id="@+id/buttonN4"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:text="@string/n4"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color1"
            android:background="@drawable/button_other"
            android:layout_margin="5dp"
            android:stateListAnimator="@null" />
        <android.widget.Button
            android:id="@+id/buttonN5"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:text="@string/n5"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color1"
            android:background="@drawable/button_other"
            android:layout_margin="5dp"
            android:stateListAnimator="@null" />
        <android.widget.Button
            android:id="@+id/buttonN6"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:text="@string/n6"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color1"
            android:background="@drawable/button_other"
            android:layout_margin="5dp"
            android:stateListAnimator="@null" />
        <android.widget.Button
            android:id="@+id/buttonSub"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:text="@string/sub"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color2"
            android:background="@drawable/button_other"
            android:layout_margin="5dp"
            android:stateListAnimator="@null"
            android:textStyle="bold"/>

        <android.widget.Button
            android:id="@+id/buttonN1"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:text="@string/n1"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color1"
            android:background="@drawable/button_other"
            android:layout_margin="5dp"
            android:stateListAnimator="@null" />
        <android.widget.Button
            android:id="@+id/buttonN2"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:text="@string/n2"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color1"
            android:background="@drawable/button_other"
            android:layout_margin="5dp"
            android:stateListAnimator="@null" />
        <android.widget.Button
            android:id="@+id/buttonN3"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:text="@string/n3"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color1"
            android:background="@drawable/button_other"
            android:layout_margin="5dp"
            android:stateListAnimator="@null" />
        <android.widget.Button
            android:id="@+id/buttonAdd"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:text="@string/add"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color2"
            android:background="@drawable/button_other"
            android:layout_margin="5dp"
            android:stateListAnimator="@null"
            android:textStyle="bold"/>

        <android.widget.Button
            android:id="@+id/buttonE"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:textAllCaps="false"
            android:text="@string/e"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color1"
            android:background="@drawable/button_other"
            android:layout_margin="5dp"
            android:stateListAnimator="@null" />
        <android.widget.Button
            android:id="@+id/buttonN0"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:text="@string/n0"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color1"
            android:background="@drawable/button_other"
            android:layout_margin="5dp"
            android:stateListAnimator="@null"
            android:contentDescription="@string/n0_description" />

        <android.widget.Button
            android:id="@+id/buttonPoint"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:text="@string/point"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color1"
            android:background="@drawable/button_other"
            android:layout_margin="5dp"
            android:stateListAnimator="@null" />
        <android.widget.Button
            android:id="@+id/buttonEqual"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:text="@string/equal"
            android:textSize="@dimen/text_size"
            android:textColor="@color/white"
            android:background="@drawable/button_equal"
            android:layout_margin="5dp"
            android:stateListAnimator="@null"
            android:textStyle="bold"/>
    </GridLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/a"
        android:layout_marginBottom="@dimen/display_marginTop"
        android:scrollbars="none">

        <GridLayout
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="1">

            <TextView
                android:id="@+id/resultHistory3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|bottom"
                android:padding="@dimen/display_answer_padding"
                android:text="@string/empty"
                android:textColor="@color/text_color3"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/resultHistory2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|bottom"
                android:padding="@dimen/display_answer_padding"
                android:text="@string/empty"
                android:textColor="@color/text_color3"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/resultHistory1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|bottom"
                android:padding="@dimen/display_answer_padding"
                android:text="@string/empty"
                android:textColor="@color/text_color3"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/resultTextEmpty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|bottom"
                android:padding="@dimen/display_answer_padding"
                android:text="@string/empty"
                android:textColor="@color/text_color3"
                android:textSize="@dimen/land_text_padding"
                tools:ignore="SmallSp,SpUsage" />

            <TextView
                android:id="@+id/resultInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|bottom"
                android:padding="@dimen/display_input_padding"
                android:text="@string/n0"
                android:textColor="@color/text_color1"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/resultAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|bottom"
                android:padding="@dimen/display_answer_padding"
                android:text="@string/n0"
                android:textColor="@color/text_color3"
                android:textSize="30sp" />
        </GridLayout>
    </ScrollView>


</RelativeLayout>
